--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
         <div id='barBlockWrapper'>
             <div id='barBlock'> </div>
         </div>
+        <div>
+            Select additional indicator to compare:
+            <div id='addCategorySelector'></div>
+            <div id='addIndicatorsSelectorBlock'>
+                <div id='addIndicatorsSelector'></div>
+            </div>
+        </div>
+        <div id="scatterBlock"></div>
         <div id='lineBlockWrapper'>
             <div id='lineBlock'></div>
         </div>
@@ -121,7 +129,7 @@
 
     <script>
         /* When the user clicks on the button, 
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            toggle between hiding and showing the dropdown content */
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    toggle between hiding and showing the dropdown content */
         function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
         }
