--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                 <div id='addIndicatorsSelector'></div>
             </div>
         </div>
-        <div id="scatterBlock"></div>
+        <div id='scatterBlockWrapper'>
+            <div id="scatterBlock"></div>
+        </div>
         <div id='lineBlockWrapper'>
             <div id='lineBlock'></div>
         </div>
@@ -129,7 +131,7 @@
 
     <script>
         /* When the user clicks on the button, 
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    toggle between hiding and showing the dropdown content */
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    toggle between hiding and showing the dropdown content */
         function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
         }
