--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
             <div id='lineBlock'></div>
         </div>
 
+        <div id="legend_block"> </div>
+
         <div id='downloadButtonDiv'>
             <input type="button" value="Download data" id="downloadButton" />
         </div>
@@ -131,7 +133,7 @@
 
     <script>
         /* When the user clicks on the button, 
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    toggle between hiding and showing the dropdown content */
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            toggle between hiding and showing the dropdown content */
         function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
         }
