--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div id='totalBoby'>
         <div id='categorySelectorWrapper'>
-            <p>categorySelector:</p>
+            <p>Category:</p>
             <div id='categorySelectorBlock'>
                 <div id='categorySelector' style="font-size: 14px;
             font-family: 'Montserrat', sans-serif;
@@ -28,7 +28,7 @@
         </div>
 
         <div id='indicatorsSelectorWrapper'>
-            <p> Select an indicator:</p>
+            <p> Indicator:</p>
             <div id='indicatorsSelectorBlock'>
                 <div id='indicatorsSelector' style="font-size: 14px;
             font-family: 'Montserrat', sans-serif;
@@ -37,7 +37,7 @@
         </div>
 
         <div id='yearsSelectorWrapper'>
-            <p> Select a year:</p>
+            <p> Year:</p>
             <div id='yearSelectorBlock'>
                 <div id='yearsSelector' style="font-size: 14px;
                 font-family: 'Montserrat', sans-serif;
@@ -46,10 +46,10 @@
         </div>
 
         <div id='countriesSelectorWrapper'>
-            <p style='grid-row:1; grid-column: 1;'>Select a country:</p>
+            <p style='grid-row:1; grid-column: 1;'>Country:</p>
             <div style='grid-row:1; grid-column: 2;'>
                 <div id='forAfter'>
-                    <button onclick="myFunction()" class="dropbtn">Country selector</button>
+                    <button onclick="myFunction()" class="dropbtn">Select the country</button>
                     <img id='checkSvg' src="https://raw.githubusercontent.com/HubashovD/UNSDG/b200a2d5d121cb469550bc24d6ae75e21a34fd96/web/pic/check.svg">
                 </div>
                 <div id="myDropdown" class="dropdown-content">
@@ -133,7 +133,7 @@
 
     <script>
         /* When the user clicks on the button, 
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            toggle between hiding and showing the dropdown content */
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    toggle between hiding and showing the dropdown content */
         function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
         }
