--- a/frame.html
+++ b/frame.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <div style="justify-content: space-between; margin: auto;">
-        <iframe src="http://127.0.0.1:8000/" style="width: 728px; height: 1000px;"></iframe>
+    <div style="justify-content: space-between; margin-left: 30%;">
+        <iframe src="http://127.0.0.1:8000/" style="width: 728px; height: 2500px;"></iframe>
     </div>
 </body>
 
