--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div id='barBlockWrapper'>
             <div id='barBlock'> </div>
         </div>
-        <div>
+        <div style="font-family: 'Montserrat', sans-serif; font: 14px; margin-bottom: 10px; margin: auto;">
             Select additional indicator to compare:
             <div id='addCategorySelector'></div>
             <div id='addIndicatorsSelectorBlock'>
@@ -133,7 +133,7 @@
 
     <script>
         /* When the user clicks on the button, 
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    toggle between hiding and showing the dropdown content */
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            toggle between hiding and showing the dropdown content */
         function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
         }
